--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,392 @@
+@charset "UTF-8";
+/*---------------------------------------------
+SavePoint™
+A very simple front-end boilerplate.
+Author: Learn the Web
+Version: 0.1
+https://github.com/learningtheweb/SavePoint
+Section: $Grid
+Uses a modified https://simplegrid.io/
+Hat tip: https://css-tricks.com/dont-overthink-flexbox-grids/
+----------------------------------------------*/
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;700&display=swap");
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.center {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+}
+
+.justify {
+  text-align: justify;
+}
+
+.hidden-sm {
+  display: none;
+}
+
+.d-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container {
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media only screen and (min-width: 33.75em) {
+  .container {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 60em) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+.row {
+  width: 100%;
+}
+
+.row--centered {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.row [class^="col"] {
+  min-height: 0.125rem;
+}
+
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12 {
+  width: 98%;
+}
+
+.col-1-sm {
+  width: 6.33333%;
+}
+
+.col-2-sm {
+  width: 14.66667%;
+}
+
+.col-3-sm {
+  width: 23%;
+}
+
+.col-4-sm {
+  width: 31.33333%;
+}
+
+.col-5-sm {
+  width: 39.66667%;
+}
+
+.col-6-sm {
+  width: 48%;
+}
+
+.col-7-sm {
+  width: 56.33333%;
+}
+
+.col-8-sm {
+  width: 64.66667%;
+}
+
+.col-9-sm {
+  width: 73%;
+}
+
+.col-10-sm {
+  width: 81.33333%;
+}
+
+.col-11-sm {
+  width: 89.66667%;
+}
+
+.col-12-sm {
+  width: 98%;
+}
+
+@media only screen and (min-width: 45em) {
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .col-1 {
+    width: 6.33333%;
+  }
+  .col-2 {
+    width: 14.66667%;
+  }
+  .col-3 {
+    width: 23%;
+  }
+  .col-4 {
+    width: 31.33333%;
+  }
+  .col-5 {
+    width: 39.66667%;
+  }
+  .col-6 {
+    width: 48%;
+  }
+  .col-7 {
+    width: 56.33333%;
+  }
+  .col-8 {
+    width: 64.66667%;
+  }
+  .col-9 {
+    width: 73%;
+  }
+  .col-10 {
+    width: 81.33333%;
+  }
+  .col-11 {
+    width: 89.66667%;
+  }
+  .col-12 {
+    width: 98%;
+  }
+  .hidden-sm {
+    display: block;
+  }
+}
+
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
+}
+
+body {
+  font: 1em "Poppins", sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display", serif;
+  color: #333;
+}
+
+a {
+  color: #0b0c11;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #5da8ef;
+}
+
+.site-header {
+  padding: 70px 0;
+}
+
+.site-logo {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.site-logo img {
+  margin: 0 auto;
+}
+
+.site-nav {
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  font-weight: bold;
+  font-size: 0.70em;
+  text-align: center;
+}
+
+.site-nav li {
+  display: inline-block;
+  margin: 0 20px;
+}
+
+.site-nav a {
+  display: block;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.info-block__title {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.info-block__title h1, .info-block__title h2, .info-block__title h3, .info-block__title h4, .info-block__title h5, .info-block__title h6 {
+  font-size: 2.4rem;
+}
+
+.info-block__title--fancy:after {
+  content: "";
+  display: inline-block;
+  width: 23px;
+  height: 2px;
+  background-color: #5da8ef;
+  margin-top: 5px;
+}
+
+.info-block__title--fancy h1, .info-block__title--fancy h2, .info-block__title--fancy h3, .info-block__title--fancy h4, .info-block__title--fancy h5, .info-block__title--fancy h6 {
+  font-size: 3rem;
+  color: #0b0c11;
+}
+
+.info-block__body {
+  margin-bottom: 20px;
+}
+
+.info-block__body p {
+  color: #616161;
+  font-size: 0.9rem;
+}
+
+.info-block__subtitle {
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  font-weight: bold;
+  color: #5da8ef;
+  font-size: 0.7rem;
+  font-family: "Poppins", sans-serif;
+  display: block;
+}
+
+.info-block__cta {
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  font-weight: bold;
+  font-size: 0.7rem;
+  height: 25px;
+}
+
+.info-block__cta a {
+  border-bottom: 2px solid #5da8ef;
+  padding-bottom: 5px;
+}
+
+.hero {
+  margin-bottom: 70px;
+}
+
+@media (min-width: 720px) {
+  .site-nav, .site-logo {
+    text-align: left;
+  }
+  .site-logo {
+    margin-bottom: 0;
+  }
+}
+
+.quote {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.quote:after {
+  content: "";
+  display: block;
+  background-color: #5da8ef;
+  width: 2px;
+  height: 100px;
+  margin: 30px auto 0 auto;
+}
+
+.quote__body {
+  font-family: "Playfair Display", serif;
+  color: #333;
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.quote__name {
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  font-weight: bold;
+  font-style: normal;
+  font-size: 0.7rem;
+  color: #333;
+  display: block;
+  margin-top: 20px;
+}
+
+.showcase {
+  width: 50%;
+}
+
+.showcase--bigger {
+  width: 65%;
+  margin-top: 40px;
+  margin-left: -7%;
+}
+
+.showcase__body {
+  margin-top: 70px;
+}
+
+@media (min-width: 800px) {
+  .hero {
+    position: relative;
+    margin-bottom: 130px;
+  }
+  .hero__text {
+    position: absolute;
+    width: 40%;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .hero__img {
+    text-align: right;
+  }
+  .hero__img img {
+    width: 85%;
+  }
+  .info-block__title {
+    margin-bottom: 20px;
+    text-align: left;
+  }
+  .quote {
+    width: 50%;
+  }
+}
+
+@media (min-width: 500px) {
+  .showcase__body {
+    width: 70%;
+    margin-top: 30px;
+    margin-left: 20px;
+  }
 }
 /*# sourceMappingURL=screen.css.map */
